[gd_scene load_steps=4 format=3 uid="uid://dhvjys782asf2"]

[ext_resource type="Theme" uid="uid://ca1ktew34wyrx" path="res://assets/ui/theme_paper_panel.tres" id="1_6745f"]
[ext_resource type="Script" path="res://scripts/ui/death_popup.gd" id="2_35amj"]

[sub_resource type="LabelSettings" id="LabelSettings_dwdhi"]
line_spacing = 1.0
font_size = 200
font_color = Color(0.819608, 0, 0.0196078, 1)

[node name="Deathpopup" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.176
anchor_top = 0.159
anchor_right = 0.85
anchor_bottom = 0.904
offset_left = -0.920027
offset_top = -34.72
offset_right = -4.57764e-05
offset_bottom = -0.320047
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6745f")
script = ExtResource("2_35amj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 501.0
grow_horizontal = 2
theme_override_constants/separation = 12

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 64

[node name="Label" type="Label" parent="Panel/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "You
Died"
label_settings = SubResource("LabelSettings_dwdhi")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "level achieved: "

[node name="levelnum" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.685548, 9.0595e-05, 0.578193, 1)
theme_override_font_sizes/font_size = 48
text = "12"

[node name="LeaderboardSubmit" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 0

[node name="submitbox" type="HBoxContainer" parent="Panel/VBoxContainer/LeaderboardSubmit"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/LeaderboardSubmit/submitbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "submit score to leaderboard: "

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/LeaderboardSubmit/submitbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_font_sizes/font_size = 48
placeholder_text = "enter name here"

[node name="Button" type="Button" parent="Panel/VBoxContainer/LeaderboardSubmit/submitbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Submit"

[node name="submitted" type="Label" parent="Panel/VBoxContainer/LeaderboardSubmit"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "submitted score to leaderboard!"
horizontal_alignment = 1

[node name="QuitGameButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 689.0
offset_top = 612.0
offset_right = 1098.0
offset_bottom = 692.0
theme_override_font_sizes/font_size = 50
text = "Live another day"

[node name="TryAgainButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 153.0
offset_top = 612.0
offset_right = 562.0
offset_bottom = 692.0
theme_override_font_sizes/font_size = 50
text = "Fight again"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 34.0

[connection signal="pressed" from="Panel/VBoxContainer/LeaderboardSubmit/submitbox/Button" to="." method="_on_submit_score_button_pressed"]
[connection signal="pressed" from="Panel/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
[connection signal="pressed" from="Panel/TryAgainButton" to="." method="_on_try_again_button_pressed"]
